# shush

./: .gitignore  Dockerfile  README.md  shhttp.cabal  shush.cabal  shush.conf  stack.yaml
app/: Main.hs
src/: .Shhttp.hs.swp  Config.hs  HttpBody.hs  HttpRequest.hs  HttpResponse.hs  Main.hs  Shhttp.hs  Shush.hs  Utils.hs  config.hs  shush.hs
test/: ConfigSpec.hs  HttpBodySpec.hs  HttpRequestSpec.hs  HttpResponseSpec.hs  ShushSpec.hs  UtilsSpec.hs
test/resources/: index.html
