name:                shush 
version:             0.1.0.0
synopsis:            Shush is a simple Haskell unfinished server for HTTP
description:         Shush is a simple Haskell unfinished server for HTTP
homepage:            jmittertreiner.ca
license:             GPL-3
license-file:        LICENSE
author:              Jason Mittertreiner
maintainer:          jason.mittertreiner@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:  git
    location: https://github.com/jmittert/shush
executable shush
    main-is:             shush.hs
    other-modules:       Config
    -- other-extensions:    
    build-depends:       base >= 4 && < 5,
                         network,
                         containers,
                         HUnit,
                         hspec
    hs-source-dirs:      src,test
    default-language:    Haskell2010

test-suite hspec
    type:                exitcode-stdio-1.0
    main-is:             Spec.hs
    build-depends:       base >= 4 && < 5,
                         hspec
    hs-source-dirs:      test,src
    default-language:    Haskell2010
