name:                shush
version:             0.1.0.0
synopsis:            Shush is a simple Haskell unfinished server for HTTP
description:         Please see README.md
homepage:            http://github.com/jmittert/shush#readme
license:             GPL-3
license-file:        LICENSE
author:              Jason Mittertreiner
maintainer:          jason.mittertreiner@gmail.com
copyright:           Jason Mittertreiner
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shush
                     , Config
                     , Utils
                     , HttpRequest
                     , HttpResponse
  build-depends:       base >= 4.7 && < 5
                     , network
                     , containers
                     , time
                     , hspec
 -- Adding hspec is a hack to make ghc-mod stop complaining about not finding HSpec in the tests
  default-language:    Haskell2010

executable shush
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network
                     , shush
  default-language:    Haskell2010

test-suite hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shush
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jmittert/shush
